# A websocket application used to tunnel tcp connections from the server to the client
# This can be used when you cannot easily open a port on the client to accept incomming connections

[package]
name = "ws-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-websocket = { git = "https://github.com/ninjasource/embedded-websocket.git", version = "0.9.0" }
rand = "0.8.3"
httparse = { version = "1.4", default-features = false }
log = "0.4"
env_logger = "0.8"
serde = { version = "1.0.123" }
serde_derive = "1.0.123"
serde_json = "1.0"
url = "2.2.2"
rustls = "0.20.0"
webpki-roots = "0.22.1"
base64 = "0.13.0"
